@@ -1,5 +1,11 @@
 package com.jk.certmon.display;
 
+import java.io.File;
+import java.util.Vector;
+
+import javax.swing.JFileChooser;
+import javax.swing.JList;
+
 import com.jk.certmon.utility.GetCert;
 
 public class Execute {
@@ -8,13 +14,16 @@ public class Execute {
 		
 		if(value.equals("Exit")){
 			System.exit(0);
-		}else if(value.equals("List Cert")){
-			certmon.certDetailsArea.setText(GetCert.getCertString((String)certmon.list.getSelectedValue()));
-			certmon.certDetailsArea.setCaretPosition(0);
 		}else if(value.equals("Choose File")){
-			// file chooser dialog box
-			// set filename in holder and title
-			// updates list and clears details
+			JFileChooser fileChooser = new JFileChooser();
+			int ret = fileChooser.showOpenDialog(null);
+			File file = fileChooser.getSelectedFile();
+			if(!(file == null)){
+				certmon.fileField.setText(file.toString());
+				certmon.listModel.removeAllElements();
+				GetCert.getCertList();
+			}
+			
 		}else if(value.equals("About")){
 			
 		}
