@@ -6,6 +6,7 @@ public class Holder {
 	
 	private static String title = "certmon";
 	private static String version = "v0.1";
+	private static String filename = "";
 	
 	public static String getDefaultFileName(){
 		return System.getProperty("java.home") + "/lib/security/cacerts".replace('/', File.separatorChar);
@@ -13,6 +14,9 @@ public class Holder {
 	
 	public static void setTitle(String inTitle){title = inTitle;}
 	public static String getTitle(){return title + " - " + version;}
+	
+	public static void setFilename(String inFile){filename = inFile;}
+	public static String getFilename(){return filename;}
 	
 	public static String getVersion(){return version;}
 }
